Improve value comparison